<resources>
    <string name="app_name">TicTacToe</string>
    <string name="ButtonTxt">Play Again</string>
    <string name="Resultado"></string>
    <string name="TopLeft"></string>
    <string name="TopCenter"></string>
    <string name="TopRight"></string>
    <string name="MidLeft"></string>
    <string name="MidCenter"></string>
    <string name="MidRight"></string>
    <string name="BotLeft"></string>
    <string name="BotCenter"></string>
    <string name="BotRight"></string>
    <string name="PvsA">Player vs AI</string>
    <string name="select">Select Difficulty:</string>
    <string name="Easy">Easy</string>
    <string name="Normal">Normal</string>
    <string name="Hard">Hard</string>
    <string name="First">First Shot:</string>
    <string name="Player">Player</string>
    <string name="AI">AI</string>
    <string name="Play">Play</string>
    <string name="mode">Select Game Mode</string>
    <string name="pvai">Player vs AI</string>
    <string name="pvp">Player vs Player</string>
    <string name="relax">RELAX!</string>
</resources>
