<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:weightSum="1"
    android:background="#00ced1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_horizontal|top">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Resultado"
                android:id="@+id/Resultado"
                android:gravity="center_vertical|center_horizontal|top"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="#cd2c2c" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Fondo"
            android:background="@raw/gato">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="381dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TopLeft"
                    android:id="@+id/TL"
                    android:height="100dp"
                    android:width="100dp"
                    android:textStyle="bold"
                    android:textSize="80sp"
                    android:onClick="TL"
                    android:allowUndo="false"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="#00ced1"
                    android:gravity="center_vertical|center_horizontal" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TopCenter"
                    android:id="@+id/TC"
                    android:height="100dp"
                    android:width="100dp"
                    android:textSize="80sp"
                    android:textStyle="bold"
                    android:onClick="TC"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="#00ced1"
                    android:gravity="center_vertical|center_horizontal" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TopRight"
                    android:id="@+id/TR"
                    android:height="100dp"
                    android:width="100dp"
                    android:textStyle="bold"
                    android:textSize="80sp"
                    android:onClick="TR"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/MR"
                    android:layout_alignEnd="@+id/MR"
                    android:background="#00ced1"
                    android:gravity="center_vertical|center_horizontal" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MidLeft"
                    android:id="@+id/ML"
                    android:height="100dp"
                    android:width="100dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textSize="80sp"
                    android:textStyle="bold"
                    android:onClick="ML"
                    android:background="#00ced1"
                    android:gravity="center_vertical|center_horizontal" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MidCenter"
                    android:id="@+id/MC"
                    android:layout_centerVertical="true"
                    android:height="100dp"
                    android:layout_alignLeft="@+id/BC"
                    android:layout_alignStart="@+id/BC"
                    android:layout_alignRight="@+id/BC"
                    android:layout_alignEnd="@+id/BC"
                    android:textSize="80sp"
                    android:textStyle="bold"
                    android:onClick="MC"
                    android:width="100dp"
                    android:background="#00ced1"
                    android:gravity="center_vertical|center_horizontal" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MidRight"
                    android:id="@+id/MR"
                    android:height="100dp"
                    android:width="100dp"
                    android:textSize="80sp"
                    android:textStyle="bold"
                    android:onClick="MR"
                    android:layout_alignTop="@+id/MC"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:background="#00ced1"
                    android:gravity="center_vertical|center_horizontal" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BotLeft"
                    android:id="@+id/BL"
                    android:height="100dp"
                    android:width="100dp"
                    android:textSize="80sp"
                    android:textStyle="bold"
                    android:onClick="BL"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="#00ced1"
                    android:gravity="center_vertical|center_horizontal" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BotCenter"
                    android:id="@+id/BC"
                    android:height="100dp"
                    android:width="100dp"
                    android:textSize="80sp"
                    android:textStyle="bold"
                    android:onClick="BC"
                    android:layout_alignTop="@+id/BL"
                    android:layout_alignLeft="@+id/TC"
                    android:layout_alignStart="@+id/TC"
                    android:background="#00ced1"
                    android:gravity="center_vertical|center_horizontal" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BotRight"
                    android:id="@+id/BR"
                    android:height="100dp"
                    android:width="100dp"
                    android:textSize="80sp"
                    android:textStyle="bold"
                    android:onClick="BR"
                    android:layout_alignTop="@+id/BC"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:background="#00ced1"
                    android:gravity="center_vertical|center_horizontal" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:baselineAligned="false"
            android:gravity="center_vertical|center_horizontal|bottom">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ButtonTxt"
                android:id="@+id/Restart"
                android:layout_weight="0.46"
                android:textSize="22sp"
                android:onClick="RestartGame"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
